2008.11.18: David Nichols
	* fixed socket handling on HPUX 64/bit builds where the header files
	  declare socklen_t to be 8 bytes wide, but the libraries expect a 
	  pointer to a 32-bit value

2008.11.12: David Nichols
	* fixed a bug in QoreHTTPClient passing a StackHash as a QoreHashNode
	* fixed bugs in JsonRpcClient and XmlRpcClient where a new connection
	  was established with each request
	* fixed a bug in the HTTPClient where a new connection was established
	  for each request even if the connection was already open and
	  Keep-Alive was set

2008.11.11: David Nichols
	* added initial event documentation
	* added AF_UNIX and AF_LOCAL constants
	* updated Queue::copy() to copy the elements of the original Queue
	* updated threading to fix the problem with exit() causing a random
	  seg fault when other threads were active as follows: all threads
	  started with joinable status PTHREAD_CREATE_JOINABLE, threads call
	  pthread_detach() before exiting; implemented a new function,
	  qore_exit_process() to be called instead of exit() that calls
	  pthread_cancel() on each thread (except the calling thread) and then
	  pthread_join(), added a call to pthread_testcancel() in
	  AbstractStatement::exec()
	* updated event documentation

2008.11.10: David Nichols
	* fixed a bug parsing the content type in QoreHTTPClient

2008.11.09: David Nichols
	* added object ID to socket event hashes
	* added new socket events for connecting and SSL negotiation
	* updated socket-test.q to use new event framework if -e or 
	  --show-events is given on the command line
	* fixed a bug setting the URL in parseURL()

2008.11.08: David Nichols
	* updated QoreSocket API to use qore_offset_t and qore_size_t where
	  appropriate instead of "int"
	* fixed some bugs in QoreSocket::send(int fd, qore_offset_t size)
	* updated QoreFile API to use qore_offset_t and qore_size_t where
	  appropriate instead of "int"

2008.11.06: David Nichols